--- a/memoapp/WebContent/WEB-INF/web.xml
+++ b/memoapp/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     
 <context-param>
  	<param-name>CHAT_ADDR</param-name>
- 	<param-value>ws://localhost:8080</param-value>
+ 	<param-value>ws://localhost:8080/</param-value>
 </context-param>   
 
 </web-app>
